[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Buttons/XButton.png" type="Texture" id=1]
[ext_resource path="res://Assets/GUI/PanelBackground.png" type="Texture" id=2]
[ext_resource path="res://Assets/Buttons/XButtonPressed.png" type="Texture" id=3]
[ext_resource path="res://Assets/Buttons/XButtonHover.png" type="Texture" id=4]
[ext_resource path="res://Scripts/WoodMinigame.gd" type="Script" id=5]
[ext_resource path="res://Font/Size20.tres" type="DynamicFont" id=6]
[ext_resource path="res://Assets/Tiles/longlog.png" type="Texture" id=7]
[ext_resource path="res://Assets/Tiles/bar.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.5, 22 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 4 )

[node name="WoodMinigame" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Controller" type="Node2D" parent="."]
visible = false

[node name="NinePatchRect" type="NinePatchRect" parent="Controller"]
margin_left = 64.0
margin_top = 72.0
margin_right = 960.0
margin_bottom = 560.0
texture = ExtResource( 2 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HitArea" type="Area2D" parent="Controller"]

[node name="TextureRect" type="TextureRect" parent="Controller/HitArea"]
margin_left = 728.0
margin_top = 272.0
margin_right = 734.0
margin_bottom = 316.0
rect_rotation = 89.9999
rect_scale = Vector2( 10.5, 10 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Controller/HitArea"]
position = Vector2( 518, 303 )
rotation = 1.57079
shape = SubResource( 1 )

[node name="HitObject" type="Area2D" parent="Controller"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Controller/HitObject"]
position = Vector2( 723, 303 )
rotation = 1.57079
shape = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="Controller/HitObject/CollisionShape2D"]
margin_left = -31.0
margin_top = -4.00006
margin_right = 33.0
margin_bottom = 3.99994
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Controller"]
visible = false
margin_left = 431.0
margin_top = 247.0
margin_right = 605.0
margin_bottom = 267.0
custom_fonts/font = ExtResource( 6 )
text = "HIT"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Controller"]
margin_left = 728.0
margin_top = 128.0
margin_right = 735.0
margin_bottom = 172.0
rect_rotation = 89.9999
rect_scale = Vector2( 10.5, 10 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Controller"]
margin_left = 163.0
margin_top = 369.0
margin_right = 875.0
margin_bottom = 412.0
custom_fonts/font = ExtResource( 6 )
text = "Press \"E\" to hit, you have to 
hit it 3 times in a row!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Controller"]
margin_left = 272.0
margin_top = 88.0
margin_right = 752.0
margin_bottom = 108.0
custom_fonts/font = ExtResource( 6 )
text = "Cut The Wood For Extra Resources!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Controller"]
margin_left = 477.0
margin_top = 456.0
margin_right = 493.0
margin_bottom = 472.0
rect_scale = Vector2( 5, 5 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Controller/TextureButton" to="." method="_on_TextureButton_pressed"]
